IDP-1650 IDP-1595  Minimal changes to Plugins support new config layout
https://issues.shibboleth.net/jira/browse/IDP-1650

Work still in progress since the properties situation still needs resolved.